crates/tui/src/ui/records_lens/snapshots/mxr_tui__ui__records_lens__tests__records_lens_answer_60.snap
---
source: crates/tui/src/ui/records_lens/tests.rs
expression: rendered
---
"╭ Archive ─ Receipts, orders, bookings and documents. Ask f╮"
"│ Archive  1 record   / lisbon booking ref                 │"
"│                                                          │"
"│ ▶ Booking ref  K7QX2M  ✓schema                           │"
"│  TAP Air Portugal · LHR -> LIS TP1357 · 20 Jan 2025      │"
"│  Part of trip "Lisbon, June 2025" (3)                    │"
"│  y copy  ↵ pdf  o email  Esc clear                       │"
"│  Also matching: Lisbon, 3 nights (88213)                 │"
"│──────────────────────────────────────────────────────────│"
"│  Coming up                                               │"
"│    Lisbon, June 2025 · in 3 days                         │"
"│                                                          │"
"│  [all] receipts orders trips bills docs                  │"
"│ ── 2025 · March ─────────────────── 2 records  £1,251.99 │"
"│▌ 03 Mar  Dell             XPS 14 lapt…    £1,249.00   pdf│"
"│          ordered · shipped · delivered 7 Mar             │"
"│          Return by 2 Apr (passed) · Warranty to 3 Mar …  │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│ Here because: order confirmation with schema.org markup… │"
"│ / ask  y copy reference  Y copy amount  Enter open docu… │"
"╰──────────────────────────────────────────────────────────╯"
