crates/tui/src/ui/records_lens/snapshots/mxr_tui__ui__records_lens__tests__records_lens_card_120.snap
---
source: crates/tui/src/ui/records_lens/tests.rs
expression: rendered
---
"╭ Archive ─ Receipts, orders, bookings and documents. Ask for what you need. ──────────────────────────────────────────╮"
"│ Archive  1 record   / ask: "lisbon booking ref"                                                                      │"
"│                                                                                                                      │"
"│  Coming up  ╭ Record ──────────────────────────────────────────────────────────────────────────────────╮             │"
"│    Lisbon, J│Apple · Receipt                                                                           │             │"
"│             │iCloud+ 200GB                                                                             │             │"
"│  [all] recei│                                                                                          │             │"
"│ ── 2025 · Ma│  Date         28 Mar 2025          (schema.org markup)                                   │s  £1,251.99 │"
"│▌ 28 Mar  App│○ Paid         £2.99                (a pattern in the email: "Total £2.99")               │K21          │"
"│             │  Order        MSXK21               (schema.org markup)                                   │             │"
"│             │                                                                                          │             │"
"│             │From 1 emails                                                                             │             │"
"│             │28 Mar  receipt      Your receipt from Apple.                                             │             │"
"│             │                                                                                          │             │"
"│             │Here because: "receipt" in the subject (unchecked).                                       │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             │                                                                                          │             │"
"│             ╰ y copy ref  Y copy amount  ↵ pdf  o email  , fix  v mark checked  X not a record  Esc clo╯             │"
"│ Here because: "receipt" in the subject (unchecked).                                                                  │"
"│ / ask  y copy reference  Y copy amount  Enter open document  o the email  p issuer page  [ previous year  ] next ye… │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
