crates/tui/src/ui/records_lens/snapshots/mxr_tui__ui__records_lens__tests__records_lens_card_60.snap
---
source: crates/tui/src/ui/records_lens/tests.rs
assertion_line: 434
expression: rendered
---
"╭ Archive ─ Receipts, orders, bookings and documents. Ask f╮"
"│ Archive  1 record   / ask: "lisbon booking ref"          │"
"│                                                          │"
"│  Comi╭ Record ────────────────────────────────────╮      │"
"│    Li│Apple · Receipt                             │      │"
"│      │iCloud+ 200GB                               │      │"
"│  [all│                                            │ns    │"
"│ ── 20│  Date         28 Mar 2025          (schem… │51.99 │"
"│▌ 28 M│○ Paid         £2.99                (a pat… │·?    │"
"│      │  Order        MSXK21               (schem… │      │"
"│      │                                            │      │"
"│      │From 1 emails                               │      │"
"│      │28 Mar  receipt      Your receipt from App… │      │"
"│      │                                            │      │"
"│      │Here because: "receipt" in the subject      │      │"
"│      │(unchecked).                                │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      │                                            │      │"
"│      ╰ y copy ref  Y copy amount  ↵ pdf  o email  ╯      │"
"│ Here because: "receipt" in the subject (unchecked).      │"
"│ / ask  y copy reference  Y copy amount  Enter open docu… │"
"╰──────────────────────────────────────────────────────────╯"
