crates/tui/src/ui/records_lens/snapshots/mxr_tui__ui__records_lens__tests__records_lens_card_80.snap
---
source: crates/tui/src/ui/records_lens/tests.rs
expression: rendered
---
"╭ Archive ─ Receipts, orders, bookings and documents. Ask for what you need. ──╮"
"│ Archive  1 record   / ask: "lisbon booking ref"                              │"
"│                                                                              │"
"│  Coming ╭ Record ──────────────────────────────────────────────────╮         │"
"│    Lisbo│Apple · Receipt                                           │         │"
"│         │iCloud+ 200GB                                             │         │"
"│  [all] r│                                                          │         │"
"│ ── 2025 │  Date         28 Mar 2025          (schema.org markup)   │1,251.99 │"
"│▌ 28 Mar │○ Paid         £2.99                (a pattern in the em… │         │"
"│         │  Order        MSXK21               (schema.org markup)   │         │"
"│         │                                                          │         │"
"│         │From 1 emails                                             │         │"
"│         │28 Mar  receipt      Your receipt from Apple.             │         │"
"│         │                                                          │         │"
"│         │Here because: "receipt" in the subject (unchecked).       │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         │                                                          │         │"
"│         ╰ y copy ref  Y copy amount  ↵ pdf  o email  , fix  v mark ╯         │"
"│ Here because: "receipt" in the subject (unchecked).                          │"
"│ / ask  y copy reference  Y copy amount  Enter open document  o the email  p… │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
