crates/tui/src/ui/records_lens/snapshots/mxr_tui__ui__records_lens__tests__records_lens_empty_120.snap
---
source: crates/tui/src/ui/records_lens/tests.rs
expression: rendered
---
"╭ Archive ─ Receipts, orders, bookings and documents. Ask for what you need. ──────────────────────────────────────────╮"
"│ Archive  0 records   / ask: "lisbon booking ref"                                                                     │"
"│                                                                                                                      │"
"│  [all] receipts orders trips bills docs                                                                              │"
"│                                                                                                                      │"
"│  Receipts, orders, bookings, bills and documents are filed here as records, one card per thing, not per email. Type  │"
"│  what you remember, like "lisbon booking", and it answers with the field. Press `T` on any email and pick Archive    │"
"│  to file it yourself.                                                                                                │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ / ask  y copy reference  Y copy amount  Enter open document  o the email  p issuer page  [ previous year  ] next ye… │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
