crates/tui/src/ui/records_lens/snapshots/mxr_tui__ui__records_lens__tests__records_lens_ledger_120.snap
---
source: crates/tui/src/ui/records_lens/tests.rs
expression: rendered
---
"╭ Archive ─ Receipts, orders, bookings and documents. Ask for what you need. ──────────────────────────────────────────╮"
"│ Archive  3 records   / ask: "lisbon booking ref"                                                                     │"
"│                                                                                                                      │"
"│  Coming up                                                                                                           │"
"│    Lisbon, June 2025 · in 3 days                                                                                     │"
"│                                                                                                                      │"
"│  [all] receipts orders trips bills docs                                                                              │"
"│ ── 2025 · March ─────────────────────────────────────────────────────────────────────────────── 2 records  £1,251.99 │"
"│▌ 28 Mar  Apple            iCloud+ 200GB                                                     £2.99 ·? MSXK21          │"
"│  03 Mar  Dell             XPS 14 laptop                                                  £1,249.00   402-118      pdf│"
"│          ordered · shipped · delivered 7 Mar                                                                         │"
"│          Return by 2 Apr (passed) · Warranty to 3 Mar 2027                                                           │"
"│ ── 2025 · February ─────────────────────────────────────────────────────────────────────────────── 1 record  £128.40 │"
"│  11 Feb  Octopus Energy   Bill, Feb                                                        £128.40                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ Here because: "receipt" in the subject (unchecked).                                                                  │"
"│ / ask  y copy reference  Y copy amount  Enter open document  o the email  p issuer page  [ previous year  ] next ye… │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
